Mantis ChangeLog

2004.xx.xx  -  0.19.0

 * Enh #3620: Redesigned filter interface.
 * Enh #3633: Experimental support for MSSQL, PgSQL and other databases using ADODB.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3646: Error in core/obsolete.php.
 * Languages: Updated Czech, Estonian and Japanese (EUC and SJIS) localisations.

2004.02.29  -  0.18.2

 * Sec #3595: bug_view_page.php: restricted custom fields are shown.
 * Sec #3596: print_bugnote_inc.php: private bugnotes are visible for not granted users (thanks to yarik123).
 * Sec #3611: Mask passwords when printing detailed error information.
 * Enh #1088: Formatting of text in bugnotes, description areas.
 * Enh #1649: Replace 'Assign to Me' with 'Assign To:' and dropdown of developers.
 * Enh #3362: Generic email notifications.
 * Enh #3548: Support RSS for news syndication.
 * Enh #3552: Improved layout of Summary page and added 'Reporter / Resolution', 'Developer / Resolution' and 'Reporter Effectiveness' reports. (thanks to Lincoln Maskey)
 * Enh #3564: In anonymous mode, login should remember the current page.
 * Enh #3609: Added new configuration variable $g_enable_project_documentation with default value ON to enable/disable project documentation feature.
 * Fix #1479: Users receive foreign-language e-mail. Now it is used default language for all e-mails.
 * Fix #3077: Inconsistency: "Assigned To" versus "Handler".
 * Fix #3118: My Account: after update of password, wrong information is given.
 * Fix #3135: Changing Print-Options does not work.
 * Fix #3440: "Allowed File Types" is case sensitive (also applies to disallowed file types).
 * Fix #3522: /news_update.php looks different from /main_page.php.
 * Fix #3537: Rewriting custom values with 0 when updating a bug.
 * Fix #3539: Simple view page shows advanced custom fields.
 * Fix #3541: Link to documentation refers to old website.